--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 
 
 ::selection {
-    background-color: var(--lightColor);
+    background-color: rgba(224, 216, 194, 0.6);
     color: var(--mainColor);
 }
 
